{{$NEXT}}

0.000014  2016-01-07 07:31:23-08:00 America/Los_Angeles

    - Silence a warning in older perls (warning breaks Test-Simple tests)

0.000013  2016-01-06 11:12:21-08:00 America/Los_Angeles

    - Remove diag from inside todo (separation of concerns, less TAP influence)
    - Remove internal TODO tracking (not needed, less TAP influence)
    - Make context less magic (Follwing advice from Graham Knop and RJBS)
    - Remove State.pm (part of Hub.pm again, no longer needs to be separate)
    - Make it possible to subclass the TAP formatter
    - Minor optimization in Event->meta
    - Better messaging if subtest plan is wrong
    - HashBase in subclass will not override accessors from parent (Graham Knop)
    - TAP formatter doc updates
    - Optimizations for Hub->process and TAP->Write
    - IPC File-Driver Optimizations
    - IPC use SHM when possible to notify about pending events

0.000012  2015-12-29 12:59:26-08:00 America/Los_Angeles

    - Restructure file layout
    - Document namespaces
    - Combine Global and API into a single module

0.000011  2015-12-28 13:09:38-08:00 America/Los_Angeles

    - Fix TAP output to match what Test::More produced

0.000010  2015-12-21 13:13:33-08:00 America/Los_Angeles

    - Rename Test2.pm to Test2/API.pm.
    - Turn Global.pm into and exporter.

0.000009  2015-12-21 10:13:18-08:00 America/Los_Angeles

    - Fix typo in Test2::Event

0.000008  2015-12-21 09:54:58-08:00 America/Los_Angeles

    - Bring back 'release' export of Test2.

0.000007  2015-12-20 12:09:04-08:00 America/Los_Angeles

    - Fix version number string
    - Fix typo

0.000006  2015-12-15 20:30:46-08:00 America/Los_Angeles

    - Port 00-report.t from old form
    - Prevent TAP from killing $!
    - Fix Instance.t
    - Typo fix
    - Comment Contex.pm better, fix minor bug
    - Better error in Trace.pm constructor
    - Test2.pm, comments, and do not use try
    - Improve try, remove protect
    - Remove unused imports